flux/apps/komga/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: komga
  namespace: multimedia-factory
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/matchTag: "true"
    uptime-kuma.io/enabled: "true"
    uptime-kuma.io/type: "http"
    uptime-kuma.io/url: "http://komga.multimedia-factory.svc:25600"
    uptime-kuma.io/name: "komga"
    uptime-kuma.io/interval: "60"
    uptime-kuma.io/retries: "3"
    uptime-kuma.io/notifications: "Monitoring Bot"
    uptime-kuma.io/group: "Media Tools"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: komga
  template:
    metadata:
      labels:
        app: komga
    spec:
      containers:
        - name: komga
          image: gotson/komga:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 25600
          volumeMounts:
            - name: komga-config
              mountPath: /config
            - name: komga-data
              mountPath: /data
      volumes:
        - name: komga-config
          persistentVolumeClaim:
            claimName: komga-config
        - name: komga-data
          persistentVolumeClaim:
            claimName: komga-data
