flux/apps/komga/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: komga
  namespace: multimedia-factory
spec:
  selector:
    app: komga
  ports:
    - protocol: TCP
      port: 25600
      targetPort: 25600
  type: ClusterIP
