flux/apps/komga/httproute.enc.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
    name: komga
    namespace: multimedia-factory
spec:
    parentRefs:
        - name: traefik-gateway
          namespace: system-addon
    hostnames:
        - ENC[AES256_GCM,data:+dD23rZNUER9TBLqSBGk5Bzt2j/sMnHOvD0u,iv:WCpv3KUGQwjh6HA3ATf1C5m++YDsGYGoPnhts0qvJT8=,tag:iwHKr+TkuLwRS9X1xFp2/g==,type:str]
    rules:
        - matches:
            - path:
                type: PathPrefix
                value: /
          backendRefs:
            - name: komga
              port: 25600
sops:
    age:
        - recipient: age15kgnnd0nlu5vxerhfcrzh5y77x7efudnk74sk4d6z3zn29yltc5q25r54a
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkak9pMGVlNmg1SDIyYlgv
[...]
            A0s1UIBBPS/PvCjPV2NIdh3AKv9Nmo75eFAb2r+eHRteVgMc4ToB5Q==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-05-05T23:02:59Z"
    mac: ENC[AES256_GCM,data:oK0HwuDGJTQVo4hdbYW75mDjpJ6lwKLghdFRaIOpiZSoGL9AMbRUSdSdwBaAL+7MKnVNQUZZ8QMLG5HQSOsmg6EHJzvWZpXmO/QHHFvPxPt6QxLxrZgnPB71p4P+w9VeJgvyiLhQU6qdhD1ZZSbobRlRhbFr2zYjgjcwZmT6Kco=,iv:D5ImI6jKEYjSD/3xHQzbSea2nvcDklaQpPOINS8kgT0=,tag:24sku0QJihFQFUaQHJjP8A==,type:str]
    encrypted_regex: hostnames|0
    version: 3.12.2
